--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
-
+colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.60.1
+git-filter-repo==2.47.0
+kiwisolver==1.4.9
+matplotlib==3.10.7
+numpy==2.2.6
+packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scipy==1.15.3
+six==1.17.0
+tqdm==4.67.1
+tzdata==2025.2
